sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value j
    j=i;
    ^AlgInsertionSort:8: error: not found: value j
    	while(j>0 && plusPetitQue(j,v)){
              ^AlgInsertionSort:8: error: not found: value j
    	while(j>0 && plusPetitQue(j,v)){
                                  ^AlgInsertionSort:9: error: not found: value j
        copie(j-1,j);
              ^AlgInsertionSort:9: error: not found: value j
        copie(j-1,j);
                  ^AlgInsertionSort:10: error: not found: value j
    		j=j-1;
                ^AlgInsertionSort:12: error: not found: value j
   	setValeur(j,v); 
                  ^