sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v:Int =0;
  
  for(i <- 0 to getNombreValeurs()-1){
    v=getValeur(i);
    j=i;
    	while(j>0 && plusPetitQue(j,v)){
        copie(j-1,j);
    		j=j-1;
  		}
   	setValeur(j,v); 
  }
  
}